# wbox-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  setup.ps1  setup.sh
docs/: backends.md  matrix.md  usage.md
examples/: config.sample.yaml
examples/xterm/: config.yaml
src/wbox/: __init__.py  config.py  server.py
src/wbox/cli/: registry.py  server.py
src/wbox/compositor/: __init__.py  base.py  cage.py  labwc.py  weston.py  win32.py
tests/: test_integration.py
tests/crash-dummy/: config.yaml  crash_dummy.py
tests/crash-dummy/scripts/: debug_input.sh  tail_log.sh
tests/mcp-dev/: server.py  worker.py
tools/wbox-pointer/: wbox-pointer.py
